# book-sargent-1993-bounded-rationality-in-macro

./: .gitignore  NOTES.md  PROMPT-PDF-TO-MD.md  README.md  index.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
_archive/marker_output/Sargent_Bounded Rationality in Macroeconomics_ The Arne Ryde_Thomas J_ Sargent/: Sargent_Bounded Rationality in Macroeconomics_ The Arne Ryde_Thomas J_ Sargent.md  Sargent_Bounded Rationality in Macroeconomics_ The Arne Ryde_Thomas J_ Sargent_meta.json
paper/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  references.bib
